--- a/.gitignore
+++ b/.gitignore
@@ -16,4 +16,6 @@ venv/*
 !resources/default/DefaultImage.jpg
 !resources/models/haarcascade_frontalface_default.xml
 
+!readme/*
+
 program/__pycache__/*
