--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 *.png
 *.xml
 *.csv
-*json
+*.json
 
 # dziwne foldery
 __pycache__/*
@@ -19,3 +19,4 @@ venv/*
 !readme/*
 
 program/__pycache__/*
+*.pyc
